--- a/css/index.css
+++ b/css/index.css
@@ -5,7 +5,7 @@
     --main-color: #8B259D;
     --accent-color: black;
     font-family: 'Work Sans', sans-serif;
-    scroll-behavior: smooth;
+     scroll-behavior: smooth; 
 }
 body {
     max-width: 980px;
@@ -44,4 +44,47 @@ body > header > nav > a {
     font-size: 20px;
     color:  var(--main-color);
     padding: 5px;
+}
+@media only screen 
+and (min-device-width : 375px) 
+and (max-device-width : 667px) { 
+    body{
+        padding: 20px;
+    }
+    .logo {
+        font-size: 10px;
+        display: flex;
+    }
+    .logo h1{
+        display: flex;
+        margin-left: auto;
+    }
+    .logo img{
+        width: 80px;
+        height: 80px;
+        display: flex;
+        margin-right: auto;
+        margin-top: auto;
+        margin-bottom: auto;
+    }
+    header{
+        display: block;
+    }
+    body > header > nav > a{
+        font-size: 12px;
+        text-align: center;
+    } 
+    .baner img {
+        width: 100%;
+    }
+    .guote{
+        font-size: 8px;
+        background: #b3b3b3;
+    }
+    .guote h2, .guote p{
+        overflow-wrap: break-word;
+        max-width: calc(100% - 60px);
+        padding-left: 10px;
+        padding-right: 10px;
+    }
 }
